<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_recents"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:title="@string/search_button_bar_name"
        android:textColor="@color/colorPrimary"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_favorites"
        android:enabled="true"
        android:icon="@drawable/camera_search_3754_weiss"
        android:title="@string/camera_button_bar_name"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_nearby"
        android:enabled="true"
        android:icon="@drawable/ic_map_foreground"
        android:title="@string/map_button_bar_name"
        app:showAsAction="ifRoom" />
    
</menu>