<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@android:color/white">


    <View
        android:id="@+id/newsfeed_rectangle"
        android:layout_width="391dp"
        android:layout_height="193dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:background="#DDDDDD"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:itemBackground="@color/colorPrimary"
        app:itemIconTint="@color/greyed_out"
        app:itemTextColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav_menu"
        app:labelVisibilityMode="unlabeled"/>

    <Button
        android:id="@+id/button_search"
        android:layout_width="372dp"
        android:layout_height="56dp"
        android:backgroundTint="@color/colorPrimary"
        android:drawableStart="@drawable/ic_search"
        android:text="@string/main_menu_button1_name"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/button_camera_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.861" />

    <Button
        android:id="@+id/button_camera_search"
        android:layout_width="372dp"
        android:layout_height="56dp"
        android:backgroundTint="@color/colorPrimary"
        android:drawableStart="@drawable/camera_search_3754_weiss_small"
        android:text="@string/main_menu_button2_name"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/button_map"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.903" />

    <Button
        android:id="@+id/button_map"
        android:layout_width="372dp"
        android:layout_height="56dp"
        android:layout_marginTop="452dp"
        android:backgroundTint="@color/colorPrimary"
        android:drawableStart="@drawable/ic_map_foreground_small"
        android:text="@string/main_menu_button3_name"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="48dp"
        android:text="@string/newsfeed_product_name"
        app:layout_constraintStart_toStartOf="@+id/newsfeed_rectangle"
        app:layout_constraintTop_toTopOf="@+id/newsfeed_rectangle" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="68dp"
        android:text="@string/newsfeed_producer_name"
        app:layout_constraintEnd_toEndOf="@+id/newsfeed_rectangle"
        app:layout_constraintTop_toTopOf="@+id/newsfeed_rectangle" />


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="23dp"
        android:text="@string/newsfeed_nutri_score_name"
        app:layout_constraintStart_toStartOf="@+id/newsfeed_rectangle"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="53dp"
        android:text="@string/newsfeed_packaging_name"
        app:layout_constraintEnd_toEndOf="@+id/newsfeed_rectangle"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="144dp"
        android:text="@string/newsfeed_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="@+id/newsfeed_rectangle"
        app:layout_constraintStart_toStartOf="@+id/newsfeed_rectangle"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="150dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/title_textview_background"
        android:text=""
        app:layout_constraintStart_toStartOf="@+id/newsfeed_rectangle"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="150dp"
        android:layout_height="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/title_textview_background"
        android:text=""
        app:layout_constraintEnd_toEndOf="@+id/newsfeed_rectangle"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="150dp"
        android:layout_height="20dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/title_textview_background"
        android:text=""
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="150dp"
        android:layout_height="20dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/title_textview_background"
        android:text=""
        app:layout_constraintEnd_toEndOf="@+id/textView9"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />


</androidx.constraintlayout.widget.ConstraintLayout>

